audio añadido y sprite inicial arreglado

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,6 +25,9 @@ body {
     color: white;
 }
 
+audio{
+    display: none;
+}
 /*-----Encabezado-----*/
 /* Descripción: Estilos para el encabezado (título) principal
 * Estructura:
