--- a/css/estilo.css
+++ b/css/estilo.css
@@ -301,7 +301,7 @@ span {
 
 @media screen and (max-width:400px){
     body{
-        gap: 30px;
+        gap: 20px;
     }
     .modalBotones{
         height: 120px;
@@ -313,8 +313,8 @@ span {
         font-size: 1.2em;
     }
     .huevito{
-        height: calc(420px/1.2);
-        width: calc(320px/1.2);
+        height: calc(420px/1.3);
+        width: calc(320px/1.3);
     }
     h1{
         font-size: 2.5em;
@@ -327,5 +327,8 @@ span {
     .modalBotones{
         width: 150px;
         padding-top: 393px;
+    }
+    .barras{
+        gap: 10px;
     }
 }
