--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,6 +56,7 @@ span {
 .huevito {
     height: 420px;
     width: 320px;
+    aspect-ratio: 320 / 420;
     margin: 15px;
     display: flex;
     flex-direction: column;
@@ -283,6 +284,10 @@ span {
     body{
         gap: 20px;
     }
+    .huevito{
+        height: calc(420px/1);
+        width: calc(320px/1);
+    }
     h1{
         font-size: 4em;
         padding-bottom: 0;
@@ -297,18 +302,20 @@ span {
 }
 @media screen and (max-width:600px){
     .huevito{
-        flex-wrap: wrap;
+        height: calc(420px/1.2);
+        width: calc(320px/1.2);
     }
     .pantalla {
-        border-image-slice: 50 50 50 50 fill;
-        border-image-outset: 19px;
+        border-image-slice: 60 60 60 60 fill;
+        border-image-outset: 17px;
         border-image-repeat: stretch stretch;
     }
     h1{
         font-size:3em;
     }
     .modalBotones{
-        padding-top: 250px;
+        width: 150px;
+        padding-top: 240px;
     }
     .barras{
         flex-direction: column;
@@ -318,13 +325,14 @@ span {
 
 @media screen and (max-width:400px){
     body{
-        gap: 20px;
+        gap: 10px;
     }
     .huevito{
-        height: calc(420px/1.3);
-        width: calc(320px/1.3);
+        height: calc(420px/1.5);
+        width: calc(320px/1.5);
     }
     .pantalla {
+        margin-bottom: 30px;
         border-image-slice: 50 50 50 50 fill;
         border-image-outset: 19px;
         border-image-repeat: stretch stretch;
@@ -337,14 +345,14 @@ span {
         width: 50px;
         height: 25px;
     }
+    .modalBotones{
+        width: 130px;
+        padding-top: 200px;
+    }
     .barras{
         gap: 10px;
     }
-    .modalBotones{
-        width: 150px;
-        padding-top: 230px;
-    }
     .start{
-        font-size: 1.5em;
+        font-size: 2em;
     }
 }
